src/objects/ints__Credit_Report_Key__c.object
<CustomObject>
    <fields>
        <fullName>ints__CreditReport__c</fullName>
        <label>Credit Report</label>
        <referenceTo>ints__Credit_Report__c</referenceTo>
        <relationshipName>CreditRecordKey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Report Key</label>
    <nameField>
        <displayFormat>CRK-{0000000000}</displayFormat>
        <label>Credit Report Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>